--- a/FicaFrio/Base.lproj/Main.storyboard
+++ b/FicaFrio/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Rao-Rf-tPL">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -22,7 +22,7 @@
         <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="FicaFrio" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="HomeViewController" customModule="FicaFrio" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -414,7 +414,6 @@
                                 <state key="normal" title="Back" image="popupIcon3"/>
                                 <connections>
                                     <action selector="newGoal:" destination="O4b-DK-hPY" eventType="touchUpInside" id="LQH-r7-Uo3"/>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="PUB-o6-lYQ"/>
                                 </connections>
                             </button>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nova Meta" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZY-mT-jQe">
@@ -645,8 +644,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AjL-et-cJ1">
                                 <state key="normal" image="setavoltar"/>
                                 <connections>
-                                    <action selector="back:" destination="qOg-3a-aVT" eventType="touchUpInside" id="Up3-ei-wUp"/>
-                                    <segue destination="O4b-DK-hPY" kind="show" id="K6w-Ng-OfA"/>
+                                    <action selector="back:" destination="whk-Og-WXW" eventType="touchUpInside" id="GKg-EU-fYP"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -848,9 +846,6 @@
                                 <frame key="frameInset" minX="10" minY="10" width="54" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="setavoltar"/>
-                                <connections>
-                                    <segue destination="Rao-Rf-tPL" kind="show" id="bij-aJ-Wg1"/>
-                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -867,7 +862,7 @@
                         <outlet property="step2" destination="arX-L5-Bmz" id="Qyr-By-b4n"/>
                         <outlet property="step3" destination="9St-Zj-ern" id="yq6-bC-OCq"/>
                         <outlet property="timerButton" destination="Twj-Vl-p1j" id="VRS-E3-EQT"/>
-                        <outlet property="titleGoal" destination="1G3-IF-n1Y" id="s4u-qP-WTw"/>
+                        <outlet property="titleGoal" destination="2Xc-Mv-cBl" id="9Hv-hE-zjb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Id5-pB-mOa" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -883,7 +878,7 @@
         <scene sceneID="PbC-fa-Z4f">
             <objects>
                 <navigationController storyboardIdentifier="navigationController" useStoryboardIdentifierAsRestorationIdentifier="YES" navigationBarHidden="YES" id="Rao-Rf-tPL" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="M7s-ui-lDV">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="M7s-ui-lDV">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -930,7 +925,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="bD3-Rz-XB4"/>
-        <segue reference="bF3-yD-Kli"/>
         <segue reference="SIK-03-OEX"/>
     </inferredMetricsTieBreakers>
 </document>
