--- a/FicaFrioWatch/Base.lproj/Interface.storyboard
+++ b/FicaFrioWatch/Base.lproj/Interface.storyboard
@@ -1,16 +1,67 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11055"/>
+        <deployment identifier="watchOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11077"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SF-Compact-Display-Regular.otf">
+            <string>SFCompactDisplay-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider=""/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController">
+                    <items>
+                        <imageView width="89" height="80" alignment="center" image="logoteste" id="xtj-iN-IAU"/>
+                        <group width="1" height="77" alignment="left" id="rQ8-CS-adp">
+                            <items>
+                                <button width="1" alignment="left" verticalAlignment="center" title="Nova Meta" id="BKX-ZX-HEf"/>
+                            </items>
+                        </group>
+                    </items>
+                </controller>
             </objects>
-            <point key="canvasLocation" x="220" y="345"/>
+            <point key="canvasLocation" x="220" y="351"/>
+        </scene>
+        <!--Interface Controller-->
+        <scene sceneID="B1z-6b-cec">
+            <objects>
+                <controller id="jJt-6K-aPf">
+                    <items>
+                        <group width="136" height="67" alignment="center" id="van-Ku-SPZ">
+                            <items>
+                                <label width="136" height="40" alignment="left" verticalAlignment="center" text="The TestFlight app allows testers to install and beta test apps on iOS, tvOS and watchOS devices." textAlignment="center" numberOfLines="6" id="kRs-A2-nZu">
+                                    <fontDescription key="font" name="SFCompactDisplay-Regular" family="SF Compact Display" pointSize="9"/>
+                                </label>
+                            </items>
+                        </group>
+                        <group width="1" alignment="center" id="Ipx-ef-vGY">
+                            <items>
+                                <imageView width="31" height="31" alignment="center" verticalAlignment="center" image="botao_naopreenchido" id="waG-N8-Ocj"/>
+                            </items>
+                        </group>
+                        <group width="1" height="40" alignment="center" id="MLb-E1-6NU">
+                            <items>
+                                <group width="39" alignment="center" verticalAlignment="center" id="A5I-3a-Iip">
+                                    <items>
+                                        <button width="29" height="29" alignment="center" backgroundImage="logoteste" id="WLO-cB-yxg"/>
+                                    </items>
+                                </group>
+                                <group width="39" alignment="center" verticalAlignment="center" id="yhV-zO-Def">
+                                    <items>
+                                        <button width="29" height="29" alignment="center" backgroundImage="botao_comecarTarefa" id="9CB-Y5-Wef"/>
+                                    </items>
+                                </group>
+                            </items>
+                        </group>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="478" y="346"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -31,7 +82,7 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider=""/>
+                <controller id="4sK-HA-Art" customClass="NotificationController"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
